<resources>
    <string name="app_name">E-kengash</string>
    <string name="home">Home</string>
    <string name="appeals">Appeals</string>
    <string name="chat">Chat</string>
    <string name="more">More</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="e_kengash_naxborot_portali">E-Kengash \nInformation portal</string>
    <string name="news">News</string>
    <string name="jonli_nefirlar">Live\nBroadcasts</string>
    <string name="virtual_nqabulxona">Virtual\nReception</string>
    <string name="qabulga_nyozilish">Sign up for an appointment</string>
    <string name="murojaat_nyuborish">Apply\nSend</string>
    <string name="malumotlar_bo_ylab_izlash">Search across data</string>
    <string name="barcha_xizmatlar">All services</string>
    <string name="kengash">Council</string>
    <string name="kotibiyat">Secretariat</string>
    <string name="doimiy_komissiya">Standing Committee</string>
    <string name="senator_va_deputatlar">Senators and deputies</string>
    <string name="yoshlar_parlamenti">Youth Parliament</string>
    <string name="tadbirlar">Events</string>
    <string name="muhokama">Discussion</string>
    <string name="qabulga_yozilish">Sign up for an appointment</string>
    <string name="profil">Profile</string>
    <string name="maqolalar">Articles</string>
    <string name="hujjatlar">Documents</string>
    <string name="faq">Frequently asked questions</string>
    <string name="sozlamalar">Settings</string>
    <string name="dastur_haqida">About the program</string>
    <string name="chiqish">Exit</string>
    <string name="ushbu_ma_lumotlarni_to_ldirishingiz_talab_etiladi">You will be required to provide this information</string>
    <string name="murojaat_mavzusi">The subject of the appeal:</string>
    <string name="murojaat_mavzuyingizni_kiriting">Enter your reference topic</string>
    <string name="murojaat_turi">Type of application:</string>
    <string name="ariza">Application</string>
    <string name="yo_nalishi">Direction:</string>
    <string name="ta_lim">Education</string>
    <string name="viloyatinggiz">Your region:</string>
    <string name="viloyatinggizni_kiriting">Enter your region</string>
    <string name="tumaningiz_shahar">Your District (City):</string>
    <string name="tuman_shahri_ni_kiriting">Enter the District (City)</string>
    <string name="mfy">Neighborhood:</string>
    <string name="mfy_in_kiriting">Enter the neighborhood</string>
    <string name="manzil">Address:</string>
    <string name="manzilingizni_to_liq_kiriting">Enter your full address</string>
    <string name="murojaat_matni">Reference text:</string>
    <string name="keyingisi">Next</string>
    <string name="rasm_yoki_fayl_biriktirish">Attach an image or file</string>
    <string name="amalni_bajara_olmaysiz">You cannot perform the operation</string>
    <string name="dasturning_imkoniyatlaridan_to_liq_foydalanish_uchun_kirishni_bosing">Click Login to take full advantage of the program!</string>
    <string name="kirish">Login</string>
    <string name="neww">New</string>
    <string name="biz_sizning_ma_lumotlaringizni_tekshirishimiz_uchun_telefon_raqamingizni_kiriting">Enter your phone number so we can verify your information</string>
    <string name="telefon_raqami">Phone number:</string>
    <string name="parol">Password:</string>
    <string name="tizimda_mavjud">Available in the system</string>
    <string name="tizimda_mavjud_emas">Not available in the system</string>
    <string name="ismi">Name:</string>
    <string name="familiyasi">Last name:</string>
    <string name="sharif">Middle name:</string>
    <string name="xafsizlik_paroli">Security password:</string>
    <string name="isminggizni_kiriting">Enter your name</string>
    <string name="sharifingizni_kiriting">Enter your father\'s name</string>
    <string name="parolingizni_kiriting">Enter your password</string>
    <string name="parolni_qayta_kiriting">Enter the password again</string>
    <string name="familiyangizni_kiriting">Enter your last name</string>
    <string name="bildirishnomalar">Notifications</string>
    <string name="jonli_efirlar">Live broadcasts</string>
    <string name="shuningdek_yana">Also again:</string>
    <string name="yana">All</string>
    <string name="viloyatlar">Provinces</string>
    <string name="ma_lumotlar">Information</string>
    <string name="tumanlar_shahar">Districts (cities)</string>
    <string name="tasdiqlash">Confirmation</string>
    <string name="raqamiga_yuborildi">sent to</string>
    <string name="sms_kod">SMS code</string>
    <string name="qayta_yuborish">Send again</string>
    <string name="raqamni_kiriting">Enter the number</string>
    <string name="lavozimi">Position</string>
    <string name="f_i_o">F.I.O</string>
    <string name="o_zbekiston_respublikasi_deputatlar_nto_g_risidagi_moddalar_jamlanmasi">Collection of Articles of Deputies\nof the Republic of Uzbekistan</string>
    <string name="tuman_shaharlar_ni_tanlang">Select a district (city)</string>
    <string name="umumiy">General</string>
    <string name="umumiy_kotibiyat_a_zolari">Members of the General Secretariat</string>
    <string name="deputatlar">Deputies</string>
    <string name="senatorlar">Senators</string>
    <string name="takliflar">Suggestions</string>
    <string name="meniki">I am</string>
    <string name="sessiyalar">Meetings</string>
    <string name="dk_tarkibi">DK structure</string>
    <string name="nizom">Regulation</string>
    <string name="tumanlar">Districts</string>
    <string name="ro_yhatdan_o_tgan">Registered</string>
    <string name="ha_ketin_nqaytib_kelaman">Yes, I\'ll come back later</string>
    <string name="yo_q">No</string>
    <string name="haqiqattan_dasturdan_nchiqmoqchimisiz">Do you really want to exit the program?</string>
    <string name="yo_nalishni_kiriting">Enter the route</string>
    <string name="murojaat_turini_kiriting">Enter the application type</string>
    <string name="murojaatingiz_yuborildi">Your request has been sent</string>
    <string name="tez_orada_murojaatingizga_javob_beriladi">Your request will be answered shortly</string>
    <string name="asosiy_menyuga_qaytish">Return to the main menu</string>
    <string name="chop_etish">Print out</string>
    <string name="ulashish">Share</string>
    <string name="komissiyani_tanlang">Select the commission</string>
    <string name="mahalliy_byudjet_iqtisodiy_islohotlarni_amalga_oshirish_ninvestitsiyalar_va_tadbirkotlikni_rivojlantirish_nbo_yicha_doimiy_komissiyasi">Standing Committee on Local Budget, Economic Reforms, Investment and Entrepreneurship Development</string>
    <string name="oliy_majlis_senatorlari">Senators of the Oliy Majlis</string>
    <string name="oliy_majlis_deputatlari">Deputies of the Oliy Majlis</string>
    <string name="yo_nalish_nuqtasiz">Direction</string>
    <string name="parolni_yangilash">Password update</string>
    <string name="tumaningiz">Your district</string>
    <string name="erkak">Male</string>
    <string name="hujjatlar_bo_ylab_izlash">Search through documents</string>
    <string name="viloyat">Province</string>
    <string name="tuman">District</string>
    <string name="turi">Type</string>
    <string name="vaqti">Time</string>
    <string name="xabarnoma">Notification</string>
    <string name="keshlash_imkoniyati">Caching capability</string>
    <string name="tizim_haqida">About the system</string>
    <string name="mfy_nuqtasiz">Neighborhood</string>
    <string name="holat">Status</string>
    <string name="murojaat_jo_natish">Send application</string>
    <string name="ishxonasi">Office:</string>
    <string name="tug_ulgan_sana">Date of birth:</string>
    <string name="tug_ulgan_joyi">Place of birth:</string>
    <string name="mullati">Nation:</string>
    <string name="mutaxassisligi">Specialty:</string>
    <string name="qo_mitaga_na_zoligi">To the Committee:</string>
    <string name="deputatning_qabul_vaqtlari">Reception hours of the deputy</string>
    <string name="qabul_vaqtini_tanlang">Select the time of reception</string>
    <string name="vaqtni_tanlang">Select the time</string>
    <string name="qabul_yo_nalishini_tanlang">Select an admission route</string>
    <string name="izoh_yozing">Write a comment</string>
    <string name="virtual_qabulxona">Virtual Reception</string>
    <string name="habar_yozing">Write a message</string>
    <string name="fayllar">Files:</string>
    <string name="hududi">Territory:</string>
    <string name="ma_lumoti">Information:</string>
    <string name="izohlar">Comments</string>
    <string name="izohni_yuborish">Send a comment</string>
    <string name="tavsiya_etiladi">Recommended</string>
    <string name="kengash_nuqtasi_bor">Council:</string>
    <string name="okurugi_nuqtasi_bor">Okurugi:</string>
    <string name="partiyasi_nuqtasi_bor">Party:</string>
    <string name="doimiy_komissiya_nuqtasi_bor">Permanent Commission:</string>
    <string name="ish_joyi_lavozimi">Workplace, position:</string>
    <string name="tugatgan_ta_lim_muassasasi">Graduated educational institution:</string>
    <string name="yashash_manzili">Residence address:</string>
    <string name="qonunlar_inson_nfarovonligi_uchun_nishlaydi">Laws work for the good of man</string>
    <string name="til">English</string>
    <string name="interfeys_tili">Interface language</string>
    <string name="sizda_hozircha_nxabarlar_yoq">You have no messages for you</string>
    <string name="parolni_tiklash">Restore password</string>
    <string name="siz_tizimdan_allaqchon_ro_yatdan_o_tgansiz_parolingizni_kiritish_va_sms_kod_orqali_tasdiqlash_orqali_profilingizga_kirishingiz_mumkin">You have already done a system of system. You can access your profile by entering your password and confirmation through the SMS code.</string>
    <string name="title_activity_sign_in_up_web_view">SignInUpWebViewActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="barchasi">All</string>
    <string name="korib_chiqilmoqda">Under review</string>
    <string name="yakunlangan">Done</string>
    <string name="korilmagan">Not seen</string>
</resources>